[project]
name = "dev-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kotaro", email = "11015194+kotaroPurple@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
]

[project.scripts]
dev-environment = "dev_environment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
